# gh-snitch

./: CONTRIBUTING.md  Makefile  README.md  install.sh  mkver.conf  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/design/: README.md
docs/manual/: options.md  output-formats.md  troubleshooting.md  usage.md
src/ghsnitch/: api.py  cache.py  cli.py  config.py  filesystem.py  logger.py  snapshot.py  ui.py  updater.py  xdg.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_logger.py  test_snapshot.py  test_ui.py
utils/: bump_version_if_tag_exists.sh  check_binary_version.sh  create_release.sh  install_git_mkver.sh  read_version.py
